--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -51,6 +51,7 @@ body {
     --light-gray: #f5f6fa;
     --green: #0c9986;
     --blue: #4880ff;
+    --task-red: rgba(255, 0, 0, 0.2);
 
     /* Font Size */
     --font-size-hero: 48px;
