--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,9 @@ body {
 
 @layer base {
   :root {
+    /* box-shadow */
+    --navBarShadow: 3px 1px 10px 0px rgba(0, 0, 0, 0.10);
+    /* color */
     --background: 0 0% 100%;
     --foreground: 0 0% 3.9%;
     --card: 0 0% 100%;
