--- a/src/app/calendar/index.css
+++ b/src/app/calendar/index.css
@@ -1,3 +1,13 @@
+/* manipulates all headers */
+.rbc-header {
+  padding: 10px;
+  font-size: 12px;
+  span {
+    text-transform: uppercase;
+  }
+}
+
+/* manipulates the month header */
 .rbc-month-header {
   background-color: #f3f3f3;
   border-radius: 10px 10px 0 0;
@@ -5,14 +15,12 @@
   font-size: smaller;
 }
 
-.rbc-header {
-  padding: 8px;
-}
-
+/* changes the border of the month view */
 .rbc-month-view {
   border-radius: 10px;
 }
 
+/* refers to the unavailable dates in the month */
 .rbc-off-range-bg {
   background: repeating-linear-gradient(
     -45deg,
@@ -26,17 +34,24 @@
 .rbc-event {
   padding: 0;
   margin: 0;
-  text-align: center;
+  border: none;
   align-self: baseline;
+  background-color: transparent;
 }
 
-.rbc-event-content {
-  align-items: baseline;
-  align-self: baseline;
+.rbc-event-label {
+  display: none;
 }
 
-.rbc-row {
-  align-items: self-end;
+/* manipulates the event container */
+.rbc-events-container {
+  border: none;
+  width: 100%;
+}
+
+/* changes the heigh of the time slots in day view */
+.rbc-timeslot-group {
+  min-height: 60px;
 }
 
 .rbc-btn-group {
